updated timing & z-index issues

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -393,7 +393,8 @@ header {
   left: 0;
   position: fixed;
   top: 0;
-  width: 100%; }
+  width: 100%;
+  z-index: 100; }
   header > div {
     display: grid;
     grid-template-areas: "logo burger" "nav nav";
